# Physical-AI-and-Humanoid-Book-

./: .env.example  .gitignore  BACKEND_TRANSLATION_SETUP.md  CALLBACK_SETUP.md  CHUNKING_IMPLEMENTATION.md  CLAUDE_AUTH_SETUP.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FINAL_TESTING_INSTRUCTIONS.md  FIXES_SUMMARY.md  HANGING_TRANSLATION_FIX.md  MOCK_OAUTH.md  NEXT_STEPS.md  OAUTH_FIX_DOCUMENTATION.md  OAUTH_SETUP.md  OAUTH_SETUP_INSTRUCTIONS.md  Procfile  QUICK_START_TESTING.md  RAGBOT_FIXES_IMPLEMENTATION.md  RAGBOT_FIX_COMPLETE.md  RAGBOT_INTEGRATION_ANALYSIS.md  RAG_INTEGRATION_TEST_RESULTS.md  RAILWAY_AUTH_FIX.md  README.md  RESTART_GUIDE.md  RESTART_SERVER.md  SETUP_OAUTH.md  START_SERVER.bat  STATUS_REPORT.md  TESTING_GUIDE.md  TEST_SUMMARY.md  TRANSLATION_FIX_SUMMARY.md  TRANSLATOR_FINAL_STATUS.md  TRANSLATOR_FIX.md  database_schema.sql  docker-compose.prod.yml  (+24 more)
.claude/: settings.local.json
backend/: .gitignore  README.md  ingest.bat  main.py  pyproject.toml  requirements.txt  requirements_simple.txt  setup.bat  setup.cfg  start.bat
backend/rag_bot/: README.md  chunker.py  config.py  crawler.py  embedder.py  extractor.py  index_content.py  main.py  models.py  pdf_extractor.py  requirements.txt  storage.py
backend/src/: main.py
backend/src/agents/book_content_writer/: README.md  book_content_writer_agent.py
backend/src/agents/chapter_generator/: __init__.py  chapter_generator.py
backend/src/agents/code_explainer/: __init__.py  code_explainer.py
backend/src/agents/glossary_maker/: __init__.py  glossary_maker.py
backend/src/agents/quiz_creator/: __init__.py  quiz_creator.py
backend/src/api/: __init__.py  agent_routes.py  auth_dependencies.py  auth_routes.py  book_content_routes.py  content_routes.py  dependencies.py  main.py  new_translation_routes.py  rag_routes.py  rate_limiting.py  translation_routes.py
backend/src/config/: __init__.py  settings.py
backend/src/database/: __init__.py  database.py
backend/src/middleware/: agent_auth_middleware.py
backend/src/models/: __init__.py  agent_request.py  book_chapter.py  content_link.py  generated_content.py  rag_session.py  token.py  user.py  user_profile.py
backend/src/scripts/: validate_subagents.py
backend/src/services/: __init__.py  auth_service.py  book_content_service.py  chapter_service.py  code_explainer_service.py  content_link_service.py  content_personalization_service.py  content_service.py  glossary_service.py  huggingface_translation.py  quality_scoring_service.py  quiz_service.py  translation_service.py  user_service.py
backend/src/shared/utils/: __init__.py  content_formatter.py  content_validation.py  rate_limiter.py  rate_limiting.py  security.py  user_session_manager.py
backend/src/utils/: cache.py  errors.py  logging.py
backend/tests/: conftest.py  conftest.py.tmp.16908.1766663314378  test_agent_status.py  test_api.py  test_book_content_writer.py  test_rag_routes.py  test_subagent_services.py
deployment/: Dockerfile.backend  Procfile  README.md  book-agent-system.service  docker-compose.prod.yml  docker-compose.yml
docs/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GITHUB_DEPLOYMENT.md  HACKATHON_COMPLETION_REPORT.md  INITIALIZATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  oauth-setup-guide.md  translator-agent-documentation.md
frontend/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  README.md  docusaurus.config.js  docusaurus.config.local.js  nginx.conf  package-lock.json  package.json  sidebars.js  (+1 more)
(+259 files in other folders)
