[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-agent-backend"
version = "0.1.0"
description = "Backend services for the multi-agent book generation system"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "qdrant-client>=1.7.0",
    "openai==1.3.4",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "python-dotenv==1.0.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==6.1.0",
    "isort==5.12.0",
    "mypy==1.8.0",
    "pre-commit==3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]