[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-agent-backend"
version = "0.1.0"
description = "Backend services for the multi-agent book generation system"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic[email]==2.10.3",
    "python-multipart==0.0.20",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "qdrant-client>=1.16.1",
    "openai==1.57.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "python-dotenv==1.0.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==6.1.0",
    "isort==5.12.0",
    "mypy==1.8.0",
    "pre-commit==3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]