[metadata]
name = book-agent-backend
version = 0.1.0
description = Backend services for the multi-agent book generation system
author = Developer
author_email = dev@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi==0.104.1
    uvicorn[standard]==0.24.0
    pydantic==2.5.0
    python-multipart==0.0.6
    passlib[bcrypt]==1.7.4
    python-jose[cryptography]==3.3.0
    qdrant-client==1.7.0
    openai==1.3.4
    psycopg2-binary==2.9.9
    sqlalchemy==2.0.23
    alembic==1.13.0
    python-dotenv==1.0.0
    pytest==7.4.3
    pytest-asyncio==0.21.1
    httpx==0.25.2
    pydantic-settings==2.1.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
asyncio_mode = auto

[flake8]
max-line-length = 88
extend-ignore = E203, W503